# docint

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.backend  Dockerfile.backend.cpu  Dockerfile.backend.cuda  Dockerfile.frontend  Dockerfile.vllm  LICENSE  MIGRATION_GUIDE.md  Makefile  README.md  config.toml  docker-compose.yml  nginx.vllm.conf  pyproject.toml
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  ci.yml  claude-code-review.yml  codeql.yml  frontend-ci.yml  release-tag.yml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  test.py
backend/docint/: app.py  cli.py
backend/docint/cli/: ingest.py  query.py
backend/docint/core/: agentic.py  agents.py  ingest.py  ingestion_pipeline.py  ollama_cfg.py  query.py  rag.py  session_manager.py
backend/docint/core/chat/: citation.py  conversation.py  turn.py
backend/docint/core/readers/: audio.py  documents.py  images.py  json.py  required_exts.txt  tables.py
backend/docint/modules/: core.py  documents.py  ollama_cfg.py  rag.py  scanner.py  tables.py
backend/docint/modules/chat/: citation.py  conversation.py  turn.py
backend/docint/modules/readers/: documents.py  images.py  json.py  tables.py
backend/docint/utils/: __init__.py  clean_text.py  env_cfg.py  fastembed_patch.py  hashing.py  ingest.py  logging_cfg.py  mimetype.py  model_cfg.py  ollama_cfg.py  testdir.py
backend/docint/utils/prompts/: summarize.txt
backend/tests/: conftest.py  test_agents.py  test_app.py  test_app_api.py  test_chat_models.py  test_documents_reader.py  test_fastembed_patch.py  test_ingest.py  test_query.py  test_query_cli.py  test_rag.py  test_rag_device_fallback.py  test_rag_unit.py  test_tables.py  test_utils_mimetype.py  test_utils_misc.py
backend/wizard/: app.py  cli.py
backend/wizard/helpers/: unescape_unicode.py
backend/wizard/modules/: rag.py
backend/wizard/utils/: ingest.py  logging_cfg.py
backend/wizard/utils/logging/: logging.yaml
deploy/: Modelfile.bge-m3
docint/: __init__.py  app.py
docint/agents/: __init__.py  clarify.py  context.py  generation.py  history.py  orchestrator.py  policies.py  retrieval.py  tools.py  types.py  understanding.py
docint/cli/: __init__.py  eval.py  ingest.py  query.py  resolve.py  serve.py  verify.py
docint/core/: __init__.py  api.py  collection_overview.py  ingestion_pipeline.py  ner.py  rag.py  retrieval_filters.py  session_manager.py
docint/core/auth/: __init__.py  principal.py
docint/core/entities/: __init__.py  resolution.py  store.py
docint/core/graph/: __init__.py  entity_resolution.py  models.py  query_planner.py  service.py
docint/core/ingest/: __init__.py  events.py  images_service.py  ingestion_pipeline.py  media_transcribe.py  social_linker.py  standalone_media.py  streaming_executor.py
docint/core/pipeline/: __init__.py  artifacts.py  chunking.py  extraction.py  layout.py  models.py  ocr.py  orchestrator.py  triage.py
docint/core/readers/: __init__.py  audio.py  documents.py  docx.py  images.py  json.py  pipeline.py  rtf.py  tables.py
docint/core/state/: __init__.py  base.py  citation.py  collection_owner_manager.py  collection_ownership.py  conversation.py  report.py  report_item.py  report_manager.py  report_render.py  session_manager.py  turn.py
docint/ui/: __init__.py  analysis.py  chat.py  components.py  dashboard.py  ingest.py  inspector.py  sidebar.py  state.py  theme.py
docint/utils/: __init__.py  batching.py  clean_text.py  clip_client.py  csv_stream.py  cursor.py  embed_chunking.py  embedding_tokenizer.py  env_cfg.py  hashing.py  ie_extractor.py  llama_cpp_cfg.py  llm_sanitize.py  logger_cfg.py  logging_cfg.py  metadata_sanitize.py  mimetype.py  model_cfg.py  ner_aggregate.py  ner_client.py  ner_extractor.py  nextext_client.py  ollama_cfg.py  openai_cfg.py  prompt_loader.py  reference_metadata.py  required_exts.txt  retry.py  storage.py  translate_client.py  ui_strings.py
docker/: Dockerfile.backend  Dockerfile.backend.cuda  Dockerfile.frontend  compose.override.yaml  compose.yaml
docs/: README.md  api-reference.md  architecture.md  cli-reference.md  configuration.md  deployment.md  development.md  getting-started.md  ingestion.md  retrieval-and-agents.md  ui-guide.md
docs/specs/: 2026-06-30-nextext-keyframes-artifact-plan.md  2026-06-30-social-multimodal-media-linking-design.md  2026-06-30-social-multimodal-media-linking-plan.md  2026-07-01-social-linker-delimiter-and-scope-analysis.md  2026-07-08-standalone-media-ingestion-design.md  2026-07-08-standalone-media-ingestion-plan.md
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/nginx/: default.conf  security-headers.conf
frontend/src/: App.tsx  api.ts  main.tsx  theme.ts
scripts/: bundle_images.sh  create_docker_volumes.sh  download-frontend-wheels.sh
tests/: conftest.py  test_agents_generation.py  test_agents_history.py  test_agents_orchestrator.py  test_agents_retrieval.py  test_agents_understanding.py  test_api.py  test_api_collections_ownership.py  test_api_reports.py  test_api_static_mount.py  test_api_translate.py  test_app_ie.py  test_app_ner.py  test_audio_reader.py  test_build_query_engine_linkfollow.py  test_chat_models.py  test_clip_client.py  test_collection_overview.py  test_collection_owner_manager.py  test_conversation_owner_migration.py  test_csv_stream.py  test_cursor.py  test_docstore.py  test_documents_reader.py  test_docx_reader.py  test_embed_chunking.py  test_embedding_tokenizer.py  test_entity_resolution.py  test_entity_store.py  test_env_cfg.py  test_env_cfg_media_filetypes.py  test_env_cfg_nextext.py  test_eval_cli.py  test_frontend_proxy_config.py  test_graph.py  test_hierarchical.py  test_hierarchical_paragraphs.py  test_image_ingestion_service.py  test_ingest.py  test_ingest_failure_isolation.py  (+68 more)
(+198 files in other folders)
