[project]
name = "docint"
version = "0.1.0"
description = "Proof of concept RAG application"
authors = [
  { name = "nos-tromo" }
]
requires-python = ">=3.11,<3.12"
license = "Apache-2.0"
dependencies = [
  "cryptography>=49.0.0",
  "docling>=2.104.0",
  "fastapi>=0.138.0",
  "fastembed>=0.8.0",
  "fastparquet>=2026.5.0",
  "httpx>=0.28.1",
  "huggingface-hub>=1.20.1,<2.0",
  "llama-index>=0.14.22",
  "llama-index-embeddings-huggingface>=0.7.0",
  "llama-index-embeddings-openai>=0.6.0",
  "llama-index-llms-openai>=0.7.9",
  "llama-index-node-parser-docling>=0.4.2",
  "llama-index-readers-docling>=0.4.2",
  "llama-index-vector-stores-qdrant>=0.10.1",
  "loguru>=0.7.3",
  "numba>=0.65.1",
  "numpy>=2.3.5,<2.4",
  "ollama>=0.6.2",
  "openai>=2.43.0",
  "opencv-python-headless>=4.13.0.92",
  "pandas>=3.0.3",
  "pillow>=11.3.0,<12.0.0",
  "pyarrow>=24.0.0",
  "pydantic>=2.13.4",
  "pypdf>=6.13.3",
  "python-dotenv>=1.2.2",
  "python-magic>=0.4.27",
  "python-multipart>=0.0.32",
  "qdrant-client>=1.18.0",
  "requests>=2.34.2",
  "sqlalchemy>=2.0.51",
  "striprtf>=0.0.32",
  "transformers>=5.8.1,<5.9",  # <5.9 required by docling 2.102.1 (docling-core[chunking])
  "uvicorn>=0.49.0",
  "weasyprint>=69.0",
]

[project.urls]
Repository = "https://github.com/nos-tromo/docint.git"

[project.scripts]
docint = "docint.cli.serve:main"
ingest = "docint.cli.ingest:main"
resolve = "docint.cli.resolve:main"
query = "docint.cli.query:main"
query-eval = "docint.cli.eval:main"
verify = "docint.cli.verify:main"
load-models = "docint.utils.model_cfg:main"

[dependency-groups]
dev = [
    "mypy==1.19.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff==0.15.14",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["docint*"]

[tool.ruff]
# Mirrors nos-tromo/.github/configs/python-strict/ruff.toml. target-version
# is the only key that may differ (docint floors at py311). Drift fails CI.
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "D",
    "ANN",
    "UP",
    "RUF",
]
ignore = ["ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
# Mirrors nos-tromo/.github/configs/python-strict/mypy.ini. Drift fails CI.
strict = true
ignore_missing_imports = true
no_incremental = true

[tool.uv]
package = true
