[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wizard"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "fastembed-gpu>=0.7.3; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "fastembed-gpu>=0.7.3; platform_system == 'Windows' and platform_machine == 'AMD64'",
    "fastembed>=0.7.3; platform_system == 'Darwin'",
    "fastembed>=0.7.3; platform_system == 'Linux' and platform_machine != 'x86_64'",
    "fastembed>=0.7.3; platform_system == 'Windows' and platform_machine != 'AMD64'",
    "fastparquet>=2024.11.0",
    "huggingface-hub[cli]>=0.34.3",
    "ipykernel>=6.30.1",
    "llama-index>=0.13.0",
    "llama-index-embeddings-huggingface>=0.6.0",
    "llama-index-llms-ollama>=0.7.0",
    "llama-index-node-parser-docling>=0.4.0",
    "llama-index-readers-docling>=0.4.0",
    "llama-index-vector-stores-qdrant>=0.7.1",
    "numpy>=2.3.2",
    "pandas>=2.2.3",
    "pip>=25.2",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "qdrant-client>=1.15.1",
    "sqlalchemy>=2.0.42",
    "torch>=2.7.1",
    "uvicorn>=0.35.0",
    "whisperx>=3.4.2",
]

[project.scripts]
ingest = "wizard.utils.ingest:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.sources]
wizard-test = { workspace = true }
