[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docint"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "fastembed-gpu>=0.7.3; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "fastembed-gpu>=0.7.3; platform_system == 'Windows' and platform_machine == 'AMD64'",
    "fastembed>=0.7.3; platform_system == 'Darwin'",
    "fastembed>=0.7.3; platform_system == 'Linux' and platform_machine != 'x86_64'",
    "fastembed>=0.7.3; platform_system == 'Windows' and platform_machine != 'AMD64'",
    "fastparquet>=2024.11.0",
    "huggingface-hub[cli]>=0.34.3",
    "llama-index>=0.13.0",
    "llama-index-embeddings-huggingface>=0.6.0",
    "llama-index-llms-ollama>=0.7.0",
    "llama-index-node-parser-docling>=0.4.0",
    "llama-index-readers-docling>=0.4.0",
    "llama-index-vector-stores-qdrant>=0.7.1",
    "numpy>=2.3.2",
    "pandas>=2.2.3",
    "pip>=25.2",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "qdrant-client>=1.15.1",
    "sqlalchemy>=2.0.42",
    "torch>=2.7.1",
    "uvicorn>=0.35.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
cli = "docint.cli:main"
ingest = "docint.utils.ingest:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.sources]
docint = { workspace = true }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cpu",  marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
