[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docint"
version = "0.1.0"
description = "Proof of concept RAG application"
authors = [
  { name = "nos-tromo" }
]
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.116.1",
  "fastembed>=0.7.3",
  "fastparquet>=2024.11.0",
  "huggingface-hub[cli]>=0.34.3",
  "llama-index>=0.13.0",
  "llama-index-embeddings-huggingface>=0.6.0",
  "llama-index-llms-ollama>=0.7.0",
  "llama-index-node-parser-docling>=0.4.0",
  "llama-index-readers-docling>=0.4.0",
  "llama-index-vector-stores-qdrant>=0.7.1",
  "loguru>=0.7.2",
  "numpy>=2.3.2",
  "openai-whisper>=20250625",
  "opencv-python-headless>=4.11.0.86",
  "pandas>=2.2.3",
  "pillow>=11.3.0",
  "pyarrow>=21.0.0",
  "pydantic>=2.11.7",
  "pymupdf4llm>=0.0.27",
  "python-dotenv>=1.1.1",
  "python-magic>=0.4.27",
  "qdrant-client>=1.15.1",
  "sqlalchemy>=2.0.42",
  "torch>=2.7.1",
  "torchvision>=0.23.0",
  "uvicorn>=0.35.0",
]

[project.scripts]
ingest = "docint.core.ingest:main"
query = "docint.core.query:main"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff==0.14.3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.sources]
docint = { workspace = true }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cpu",  marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cpu",  marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
